# blade-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  burn.c  razerctl.1  razerctl.c
